Added more tests; removed dead code; add a lot more documentation