@@ -1,9 +1,8 @@
 package te.http.handling.deserialization;
 
-import java.util.Arrays;
 import java.util.Date;
-import java.util.List;
 
+import io.vavr.collection.List;
 import te.http.handling.deserialization.parsing.DateParser;
 import te.http.handling.deserialization.parsing.JavaDateParser;
 
@@ -11,7 +10,7 @@ public class JavaDateDeserializer implements MultiFormatDateDeserializer<Date> {
 
     @Override
     public List<DateParser<Date>> supportedFormats() {
-        return Arrays.asList(
+        return List.of(
                 new JavaDateParser("yyyy-MM-dd", "[0-9]{4}-[0-9]{2}-[0-9]{2}"),
                 new JavaDateParser("MM/dd/yyyy", "[0-9]{2}/[0-9]{2}/[0-9]{4}"),
                 new JavaDateParser("MM-dd-yyyy", "[0-9]{2}-[0-9]{2}-[0-9]{4}")
