@@ -3,9 +3,8 @@ package te.http.handling.deserialization;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.ZoneId;
-import java.util.Arrays;
-import java.util.List;
 
+import io.vavr.collection.List;
 import te.http.handling.deserialization.parsing.DateParser;
 import te.http.handling.deserialization.parsing.LocalDateParser;
 
@@ -13,7 +12,7 @@ public class LocalDateDeserializer implements MultiFormatDateDeserializer<LocalD
 
     @Override
     public List<DateParser<LocalDate>> supportedFormats() {
-        return Arrays.asList(
+        return List.of(
                 new LocalDateParser("yyyy-MM-dd", "[0-9]{4}-[0-9]{2}-[0-9]{2}"),
                 new LocalDateParser("MM/dd/yyyy", "[0-9]{2}/[0-9]{2}/[0-9]{4}"),
                 new LocalDateParser("MM-dd-yyyy", "[0-9]{2}-[0-9]{2}-[0-9]{4}")
@@ -22,7 +21,8 @@ public class LocalDateDeserializer implements MultiFormatDateDeserializer<LocalD
 
     @Override
     public LocalDate fromUnixEpoch(long epoch) {
-        return Instant.ofEpochMilli(epoch)
+        return Instant
+                .ofEpochMilli(epoch)
                 .atZone(ZoneId.systemDefault())
                 .toLocalDate();
     }
